$Id: CHANGES,v 1.144 2001/11/17 10:31:46 stelian Exp $

Changes between versions 0.4b24 and 0.4b25 (released ??????????????????)
========================================================================

1.	Added a mini howto from Patrick Walsh in the examples 
	directory.

2.	Minor man pages syntax corrections. Thanks to
	Chris Danis <screechco@home.com> for reporting the bugs.

3.	Added a script from David B. Peterson <dave@toppledwagon.com>
	to the examples section. It features dumping several
	filesystems to a remote tape drive upon ssh.

4.	Added a patch provided by Richard Jones <rich@annexia.org>
	which allows BRADEMAX (number of read errors tolerated by
	dump) to be adjusted using the -I option.

5.	Fixed a bug which disabled doing "restore -C -f -". Thanks
        to Clemens Stiglechner <a9401816@unet.univie.ac.at> for the
	patch.

6.	Add the -l option to restore to specify if, when doing a
        remote restore, the file used to access the backup is a
	regular file (the defaults being a tape drive). Restore needs
	to know this information when reading a remote compressed 
	dump. Previously, this information was autodetected, but
	the autodetection code fails (with ioctl: Inappropriate ioctl 
	for device) when using a non Linux remote box. Thanks to 
	many users and especially to Eros Albertazzi 
	<eros@lamel.bo.cnr.it> for reporting this.

	
Changes between versions 0.4b23 and 0.4b24 (released September 12, 2001)
========================================================================

1.	Fixed the permissions of a newly created QFA file by dump.

2.	Cleaned up the source of dump (the external variables 
	definition was a complete mess, making possible to have
	objects overlap).

3.	Fixed restore to use the full tape volume path when doing
	a compare (since it changes the working directory to the
	filesystem being compared in the process).

4.	Added the -q option to dump which makes dump abort 
	whenever it needs operator attention. It should be